--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,5 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "cSpell.enabled": true,
   "cSpell.allowCompoundWords": true,
-  "cSpell.words": []
+  "cSpell.words": ["psql"]
 }
