feat: till express health api

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 USERNAME=
 PASSWORD=
-IP_ADDRESS=localhost
+IP_ADDRESS=http://localhost
 PORT=8080
 # DATABASE_URL="postgresql://USERNAME:PASSWORD@IP_ADDRESS:PORT/DB_NAME?schema=SCHEMA_NAME"
