--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,4 +25,5 @@ jobs:
       - run: yarn install --frozen-lockfile
       - run: yarn fmt
       - run: yarn lint
+      - run: yarn test
       - run: yarn build
