feat: v1/news complete with full jest tests (#45)
* fix: curl

* refactor error

* add curl test

* fix: do not run jest parallel

* update eslint

* feat: normal responses

* add all test:sh tests to jest

* refactor

* add gitlab build settings

* fix: build.yaml

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,4 +25,5 @@ jobs:
       - run: yarn install --frozen-lockfile
       - run: yarn fmt
       - run: yarn lint
+      # - run: yarn test # TODO: want to run tests but needs postgreSQL database running
       - run: yarn build
