--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "resolveJsonModule": true,
     "allowJs": false,
     "noEmit": true,
-    "noUncheckedIndexedAccess": true,
+    "noUncheckedIndexedAccess": false /*index access adds a undefined type*/,
     "pretty": true,
     "target": "es2020" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
     "module": "NodeNext" /* Specify what module code is generated. */,
@@ -33,8 +33,8 @@
     "noImplicitReturns": true /* Enable error reporting for codepaths that do not explicitly return in a function. */,
     "noFallthroughCasesInSwitch": true /* Enable error reporting for fallthrough cases in switch statements. */,
     /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true,
-    "typeRoots": ["./src/@types"] /* Skip type checking all .d.ts files. */
+    "skipLibCheck": true
+    // "typeRoots": ["./src/@types"] /* Skip type checking all .d.ts files. */
   },
   "include": ["**/*.ts"],
   "exclude": ["node_modules"]
