--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "joi": "^17.10.2"
+    "joi": "^17.10.2",
+    "sanitize-html": "^2.11.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.5",
     "@types/node": "^20.6.3",
+    "@types/sanitize-html": "^2.9.0",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
