--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "rss-dumper",
+  "type": "module",
   "version": "0.0.1",
   "description": "RSS Dumper Project.",
   "scripts": {
-    "dev": "nodemon --watch 'src/**/*.ts' --exec ts-node src/app.ts",
-    "start": "ts-node src/app.ts",
+    "dev": "nodemon --watch 'src/**/*.ts' --exec yarn node --loader ts-node/esm src/app.ts",
+    "start": "yarn node --loader ts-node/esm src/app.ts",
     "build": "tsc",
     "check:types": "tsc --noEmit",
     "fmt": "prettier --check .",
@@ -21,12 +22,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@adminjs/express": "^6.0.1",
+    "@adminjs/prisma": "^5.0.1",
     "@prisma/client": "5.3.1",
+    "adminjs": "^7.2.2",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-formidable": "^1.2.0",
+    "express-session": "^1.17.3",
     "joi": "^17.10.2",
-    "sanitize-html": "^2.11.0"
+    "sanitize-html": "^2.11.0",
+    "tslib": "^2.6.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
@@ -50,6 +57,6 @@
     "typescript": "^5.2.2"
   },
   "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "yarn node --loader ts-node/esm prisma/seed.ts"
   }
 }
