--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,16 @@
 {
   "compilerOptions": {
-    "baseUrl": "./src",
+    // "baseUrl": "./src",
+    "baseUrl": "./",
     "resolveJsonModule": true,
     "allowJs": false,
     "noEmit": true,
     "noUncheckedIndexedAccess": false /*index access adds a undefined type*/,
     "pretty": true,
-    "target": "es2020" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
+    "target": "esnext" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
     "module": "NodeNext" /* Specify what module code is generated. */,
-    "moduleResolution": "NodeNext",
+    // "moduleResolution": "NodeNext",
+    "moduleResolution": "Node16",
     "sourceMap": true /* Specify how TypeScript looks up a file from a given module specifier. */,
     "outDir": "./dist" /* Specify an output folder for all emitted files. */,
     "removeComments": true /* Disable emitting comments. */,
@@ -33,8 +35,9 @@
     "noImplicitReturns": true /* Enable error reporting for codepaths that do not explicitly return in a function. */,
     "noFallthroughCasesInSwitch": true /* Enable error reporting for fallthrough cases in switch statements. */,
     /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true
+    "skipLibCheck": true,
     // "typeRoots": ["./src/@types"] /* Skip type checking all .d.ts files. */
+    "allowImportingTsExtensions": true
   },
   "include": ["**/*.ts"],
   "exclude": ["node_modules"]
