--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,12 @@
+PORT=8080
+
+# if not vercel
+# DATABASE_URL="postgresql://USERNAME:PASSWORD@IP_ADDRESS:PORT/DB_NAME?schema=SCHEMA_NAME"
+
+# if vercel
+POSTGRES_PRISMA_URL=
+POSTGRES_URL_NON_POOLING=
+
+# only for development
 USERNAME=
 PASSWORD=
-PORT=8080
-# DATABASE_URL="postgresql://USERNAME:PASSWORD@IP_ADDRESS:PORT/DB_NAME?schema=SCHEMA_NAME"
