--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.11.0",
-    "sanitize-html": "^2.11.0"
+    "sanitize-html": "^2.11.0",
+    "tsoa": "^5.1.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.14",
