--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.18.2",
     "joi": "^17.11.0",
     "sanitize-html": "^2.11.0",
+    "swagger-ui-express": "^5.0.0",
     "tsoa": "^5.1.1"
   },
   "devDependencies": {
@@ -37,6 +38,7 @@
     "@types/node": "^20.8.4",
     "@types/sanitize-html": "^2.9.2",
     "@types/supertest": "^2.0.14",
+    "@types/swagger-ui-express": "^4.1.4",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "eslint": "^8.51.0",
