modify tsconfig for decorators

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,10 @@
     "noEmit": true,
     "noUncheckedIndexedAccess": false,
     "pretty": true,
-    "target": "es2020",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "target": "es5",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "experimentalDecorators": true,
     "sourceMap": true,
     "outDir": "./dist",
     "removeComments": true,
