--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,12 @@
     "noEmit": true,
     "noUncheckedIndexedAccess": false,
     "pretty": true,
-    "target": "es5",
+    "target": "es6",
     "module": "commonjs",
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "sourceMap": true,
-    "outDir": "./dist",
+    "outDir": "./build",
     "removeComments": true,
     "importsNotUsedAsValues": "remove",
     "isolatedModules": true,
