--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "RSS Dumper Project.",
   "scripts": {
-    "dev": "nodemon --watch 'src/**/*.ts' --exec ts-node src/app.ts",
+    "dev": "nodemon --watch 'src/**/*.ts' --watch 'build/**/*.ts' --exec ts-node src/app.ts",
     "start": "ts-node src/app.ts",
     "build": "tsc",
     "check:types": "tsc --noEmit",
