add all for news

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "prisma:studio": "prisma studio",
     "test": "NODE_ENV=test jest --runInBand --collect-coverage",
     "tsoa:swagger": "tsoa spec",
-    "tsoa:route": "tsoa routes"
+    "tsoa:routes": "tsoa routes"
   },
   "author": "",
   "license": "ISC",
