--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,5 +25,7 @@ jobs:
       - run: yarn install --frozen-lockfile
       - run: yarn fmt
       - run: yarn lint
+      - run: yarn tsoa:swagger
+      - run: yarn tsoa:routes
       # - run: yarn test # TODO: want to run tests but needs postgreSQL database running
       - run: yarn build
