--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "RSS Dumper Project.",
   "scripts": {
-    "dev": "nodemon --watch 'src/**/*.ts' --exec ts-node src/app.ts",
+    "dev": "nodemon --watch 'src/**/*.ts' --watch 'build/**/*.ts' --exec ts-node src/app.ts",
     "start": "ts-node src/app.ts",
     "build": "tsc",
     "check:types": "tsc --noEmit",
@@ -16,7 +16,9 @@
     "prisma:migrate": "prisma migrate dev",
     "prisma:dev": "run-s -l prisma:generate prisma:migrate prisma:seed",
     "prisma:studio": "prisma studio",
-    "test": "NODE_ENV=test jest --runInBand --collect-coverage"
+    "test": "NODE_ENV=test jest --runInBand --collect-coverage",
+    "tsoa:swagger": "tsoa spec",
+    "tsoa:routes": "tsoa routes"
   },
   "author": "",
   "license": "ISC",
@@ -27,7 +29,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.11.0",
-    "sanitize-html": "^2.11.0"
+    "sanitize-html": "^2.11.0",
+    "swagger-ui-express": "^5.0.0",
+    "tsoa": "^5.1.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.14",
@@ -36,6 +40,7 @@
     "@types/node": "^20.8.4",
     "@types/sanitize-html": "^2.9.2",
     "@types/supertest": "^2.0.14",
+    "@types/swagger-ui-express": "^4.1.4",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "eslint": "^8.51.0",
