--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": ">=18",
+    "pnpm": ">=8"
+  },
+  "packageManager": "pnpm@8.9.2",
   "dependencies": {
     "@prisma/client": "5.4.2",
     "body-parser": "^1.20.2",
