--- a/package.json
+++ b/package.json
@@ -22,8 +22,14 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": ">=18",
+    "pnpm": ">=8"
+  },
+  "packageManager": "pnpm@8.9.2",
   "dependencies": {
     "@prisma/client": "5.4.2",
+    "@tsoa/runtime": "^5.0.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
