--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,7 @@
 PORT=8080
 
-# if not vercel
-# DATABASE_URL="postgresql://USERNAME:PASSWORD@IP_ADDRESS:PORT/DB_NAME?schema=SCHEMA_NAME"
+# "postgresql://USERNAME:PASSWORD@IP_ADDRESS:PORT/DB_NAME?schema=SCHEMA_NAME"
 
-# if vercel
 POSTGRES_PRISMA_URL=
 POSTGRES_URL_NON_POOLING=
 
