--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "rss-dumper",
   "version": "0.0.1",
-  "description": "RSS Dumper Project.",
+  "description": "rss dumper",
+  "author": "Soraki Hirano",
+  "packageManager": "pnpm@8.9.2",
   "scripts": {
     "dev": "nodemon --watch 'src/**/*.ts' --watch 'build/**/*.ts' --exec ts-node src/app.ts",
     "start": "ts-node src/app.ts",
@@ -20,13 +22,9 @@
     "tsoa:swagger": "tsoa spec",
     "tsoa:routes": "tsoa routes"
   },
-  "author": "",
-  "license": "ISC",
-  "engines": {
-    "node": ">=18",
-    "pnpm": ">=8"
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
-  "packageManager": "pnpm@8.9.2",
   "dependencies": {
     "@prisma/client": "5.4.2",
     "@tsoa/runtime": "^5.0.0",
@@ -61,8 +59,5 @@
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
-  },
-  "prisma": {
-    "seed": "ts-node prisma/seed.ts"
   }
 }
