--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "5.6.0",
+    "@prisma/client": "^5.5.2",
     "@tsoa/runtime": "^5.0.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -55,7 +55,7 @@
     "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.1.0",
-    "prisma": "5.6.0",
+    "prisma": "^5.5.2",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
