add basic and digest auth

--- a/.env.sample
+++ b/.env.sample
@@ -5,6 +5,6 @@ PORT=8080
 POSTGRES_PRISMA_URL=
 POSTGRES_URL_NON_POOLING=
 
-# only for development
+# username and password for db and basic/digest auth
 USERNAME=
 PASSWORD=
