--- a/package.json
+++ b/package.json
@@ -27,13 +27,15 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "5.6.0",
+    "@prisma/client": "^5.5.2",
     "@tsoa/runtime": "^5.0.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.11.0",
+    "passport": "^0.6.0",
+    "passport-http": "^0.3.0",
     "sanitize-html": "^2.11.0",
     "swagger-ui-express": "^5.0.0",
     "tsoa": "^5.1.1"
@@ -43,6 +45,8 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.10",
     "@types/node": "^20.9.4",
+    "@types/passport": "^1.0.16",
+    "@types/passport-http": "^0.3.11",
     "@types/sanitize-html": "^2.9.5",
     "@types/supertest": "^2.0.16",
     "@types/swagger-ui-express": "^4.1.6",
@@ -55,7 +59,7 @@
     "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.1.0",
-    "prisma": "5.6.0",
+    "prisma": "^5.5.2",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
