--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rss-dumper",
   "version": "1.0.0",
   "description": "rss dumper",
-  "author": "Soraki Hirano",
+  "author": "s-hirano-ist",
   "packageManager": "pnpm@8.11.0",
   "scripts": {
     "dev": "nodemon --watch 'src/**/*.ts' --watch 'build/**/*.ts' --exec ts-node src/app.ts",
@@ -27,7 +27,7 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^5.6.0",
+    "@prisma/client": "^5.5.2",
     "@tsoa/runtime": "^5.0.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -44,7 +44,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.10",
-    "@types/node": "^20.10.0",
+    "@types/node": "^20.9.4",
     "@types/passport": "^1.0.16",
     "@types/passport-http": "^0.3.11",
     "@types/sanitize-html": "^2.9.5",
@@ -59,7 +59,7 @@
     "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.1.0",
-    "prisma": "^5.6.0",
+    "prisma": "^5.5.2",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
