--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fmt:fix": "prettier --write .",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
+    "lint:openapi": "node script/validateOpenApi.js",
     "prisma:seed": "prisma db seed",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
@@ -58,6 +59,7 @@
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "npm-run-all": "^4.1.5",
+    "openapi-schema-validator": "^12.1.3",
     "prettier": "^3.1.1",
     "prisma": "^5.7.1",
     "supertest": "^6.3.3",
